--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin: 3% 5% 0 5%;
+    margin: 5% 7% 0 5%;
     width: 100vw;
 }
 
@@ -72,10 +72,6 @@ h1 {
     /* gap: 3%; */
 }
 
-.sitting-cameraman {
-
-    /* padding-left: 10px; */
-}
 
 .sitting-shade {
     display: flex;
@@ -101,6 +97,10 @@ h1 {
     font-size: 25px;
 }
 
+h2 {
+    font-family: 'Roboto Slab', serif;
+}
+
 .tarkov-box {
     background-color: #1E4681;
     width: 500px;
@@ -111,8 +111,6 @@ h1 {
     padding-top: 5px;
     padding-bottom: 5px;
     margin-left: 15%;
-
-
 }
 
 .name-tarkov {
@@ -125,12 +123,14 @@ h1 {
     justify-content: space-between;
     margin-top: 5%;
     font-size: 24px;
+    /* gap: 100px */
 }
 
 .text {
     /* width: 40%; */
     width: 45%;
-    min-width: 45%;
+    min-width: 35%;
+    /* margin-right: 150px; */
 }
 
 .about-courses {
@@ -144,19 +144,21 @@ h1 {
     display: flex;
     min-width: 500px;
     margin-top: 2%;
+    padding-left: 250px;
     /* margin-left: 10%; */
     /* min-width: 20%; */
-    /* margin-left: 10%; */
+    /* margin-left: 150px; */
     /* margin-top: 5%; */
 }
 
 .second-shade {
     position: relative;
     z-index: -1;
-    height: 40px;
-    width: 400px;
-    right: 370px;
-    top: 300px;
+    height: 75px;
+    width: 315px;
+    right: 530px;
+    top: 280px;
+    padding-left: 220px;
 
 }
 
@@ -173,17 +175,52 @@ h1 {
 
 .duration {
     display: flex;
+    justify-content: space-between;
+    margin-top: 2%;
+    /* margin-right: 7%; */
+    margin-left: -3%;
 }
 
+.last-shade {
+    position: relative;
+    z-index: -1;
+    right: 200px;
+    top: 15px;
+}
 
+.duration-text {
+    width: 65%;
+}
 
+.format {
+    margin-top: 5%;
+}
 
+h2 {
+    font-size: 55px;
+}
 
+.blue-color {
+    font-size: 25px;
+    color: #1E4681
+}
 
+.format-about {
+    display: flex;
+    gap: 120px;
 
+}
 
+.webinar,
+.access-forever,
+.communication {
+    width: 20%;
+}
 
-
+ul {
+    font-size: 24px;
+    width: 50%;
+}
 
 
 /* @media(max-width:1414px) {
