--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h1 {
     font-size: calc(21px + 60 * ((100vw - 320px) / (1440 - 320)));
     min-width: 50%;
     max-width: 50%;
+    margin-top: 2%;
 }
 
 .how-to {
@@ -174,29 +175,54 @@ h1 {
 
 }
 
+.crane-shade {
+    width: calc(150px + 100 * ((100vw - 320px) / (1440 - 320)));
+    align-self: center;
+    height: auto;
+    width: 40%;
+    position: relative;
+    margin-right: 7%;
+    margin-left: 2%;
+}
+
+.crane {
+    width: 50%;
+    /* margin-bottom: 10px; */
+    height: auto;
+
+}
 
 .last-cameraman {
     margin-top: 5%;
     display: flex;
+    position: relative;
+}
+
+.last-shade {
+
+    width: 45%;
+    position: absolute;
+    bottom: -5px;
+    left: 20px;
+    z-index: -1;
+
 }
 
 .duration {
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin-top: 2%;
-    /* margin-right: 7%; */
-    margin-left: -3%;
+    padding-right: 5%;
 }
 
-.last-shade {
-    position: relative;
-    z-index: -1;
-    right: 200px;
-    top: 15px;
+h3 {
+    font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .duration-text {
     width: 65%;
+    font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
+
 }
 
 .format {
@@ -204,31 +230,28 @@ h1 {
 }
 
 h2 {
-    font-size: 55px;
+    font-size: calc(18px + 10 * ((100vw - 320px) / (1440 - 320)));
     font-family: 'Roboto Slab', serif;
 }
 
 .blue-color {
-    font-size: 25px;
-    color: #1E4681
+
+    color: #1E4681;
+    font-size: calc(14px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .format-about {
     display: flex;
-    gap: 25px;
+    gap: 5%;
+    font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
 
 }
 
-.webinar,
-.access-forever,
-.communication {
-    width: 20%;
-}
 
 /* Список ЧТО УЗНАЁМ */
-ul {
-    font-size: 24px;
-    width: 50%;
+.what-list {
+    font-size: calc(16px + 10 * ((100vw - 320px) / (1440 - 320)));
+    width: 60%;
 }
 
 .programm {
