--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
-
 body,
 html {
     font-family: 'Roboto', sans-serif;
@@ -68,7 +66,6 @@ h1 {
 /* Фотография сидячего оператора с тенью */
 
 .sitting-shade {
-
     width: calc(200px + 120 * ((100vw - 320px) / (1440 - 320)));
     align-self: center;
     height: auto;
@@ -78,14 +75,12 @@ h1 {
 }
 
 .sitting-cameraman {
-
     width: 90%;
     margin-bottom: 10px;
     height: auto;
 }
 
 .first-shade {
-
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -111,8 +106,6 @@ h1 {
     background-color: #1E4681;
     width: auto;
     max-width: 45%;
-    /* min-width: 420px; */
-
     color: white;
     border-radius: 10px;
     margin-top: 10%;
@@ -139,7 +132,6 @@ h1 {
 }
 
 .text {
-
     width: 50%;
     min-width: 35%;
 
@@ -148,7 +140,6 @@ h1 {
 .about-courses {
     margin-top: 3%;
     font-size: calc(40px + 5 * (100vw / 1440)/ (1440 - 320));
-
 }
 
 /* Стоячий оператор и тень */
@@ -189,7 +180,6 @@ h1 {
 
 .crane {
     width: 50%;
-    /* margin-bottom: 10px; */
     height: auto;
 
 }
@@ -238,7 +228,6 @@ h2 {
 }
 
 .blue-color {
-
     color: #1E4681;
     font-size: calc(14px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
@@ -247,9 +236,7 @@ h2 {
     display: flex;
     gap: 5%;
     font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
-
 }
-
 
 /* Список ЧТО УЗНАЁМ */
 .what-list {
@@ -265,13 +252,9 @@ h2 {
     flex-wrap: wrap;
     margin-left: -1%;
     gap: 3%;
-    /* max-width: 1440px; */
     padding-left: 5px;
     margin-top: 3%;
-    /* text-align: center; */
     align-items: center;
-
-
 }
 
 .card {
@@ -282,7 +265,6 @@ h2 {
     border-radius: 32px;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.25);
     margin-bottom: 3%;
-
 }
 
 h4 {
@@ -338,7 +320,6 @@ h4 {
 .avatar-fb {
     display: flex;
     gap: 3%;
-
 }
 
 /* .comment  */
@@ -356,12 +337,14 @@ p {
     height: 10%;
 }
 
+/* Блок с ценой */
+
 .cost-block {
     background: #9DC9C8;
     display: block;
     margin-top: -2%;
     margin-left: -7%;
-    padding-left: 10%;
+    padding-left: 12%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
@@ -369,6 +352,10 @@ p {
 .cost-weight {
     font-size: calc(50px + 10 * ((100vw - 320px) / (1440 - 320)));
 
+}
+
+.cost-left {
+    margin-left: -0.09%;
 }
 
 .cost-lesson-now {
@@ -383,10 +370,17 @@ p {
     margin-bottom: 5%;
     font-size: calc(15px + 5 * ((100vw - 320px) / (1440 - 320)));
     font-weight: 400;
-
 }
 
+/* Footer */
 
+
+footer {
+    background-color: black;
+    margin-left: -7%;
+    padding-left: 11%;
+    padding-top: 2.5%;
+}
 
 @media(max-width:726px) {
     .programm-items {
