--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body,
-html {
+body {
     font-family: 'Roboto', sans-serif;
-    margin: 2% 0 0 3%;
-    max-width: 100%;
-    /* overflow-x: hidden; */
+    margin-top: 2%;
+    /* padding-left: 1%; */
+    /* max-width: 100%; */
+    overflow-x: hidden;
+}
+
+main {
+    padding-left: 2%;
 }
 
 /* верхняя иконка */
@@ -16,11 +20,13 @@ html {
 
 /* описание курсов */
 .nav {
+
+    list-style-type: none;
     display: flex;
-    margin-top: 5%;
-    width: 55%;
-    width: 45%;
-    min-width: 45%;
+    justify-content: space-between;
+    /* margin-left: -40px; */
+    width: 70%;
+    max-width: 714px;
 }
 
 
@@ -30,7 +36,8 @@ html {
     display: flex;
     justify-content: space-between;
     margin-left: -40px;
-    width: 45%;
+    width: 70%;
+    max-width: 714px;
 }
 
 
@@ -38,14 +45,14 @@ html {
 .globe,
 .clock,
 .date {
-    margin-right: 7%;
-    width: calc(10px + 3 * ((100vw - 320px) / (1440 - 320)));
+    margin-right: 3%;
+    width: calc(8px + 3 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .courses-list {
     width: 65%;
-    margin-right: 2%;
-    font-size: calc(10% + 10 * ((100vw - 320px) / (1440 - 320)));
+    margin-right: 1%;
+    font-size: calc(10px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
 
 
@@ -97,7 +104,7 @@ h1 {
 
 .tarkov {
     font-family: 'Roboto Slab', serif;
-    font-size: calc(20px + 10 * (100vw / 1440)/ (1440 - 320));
+    font-size: calc(16px + 10 * (100vw / 1440)/ (1440 - 320));
     padding-left: 2%;
     padding-right: 2%;
 }
@@ -246,13 +253,16 @@ h2 {
 }
 
 /* Карточки */
+.programm {
+    margin-left: 2%;
+}
 
 .programm-items {
     display: flex;
     flex-wrap: wrap;
     margin-left: -1%;
     gap: 3%;
-    padding-left: 5px;
+    /* padding-left: 5px; */
     margin-top: 3%;
     align-items: center;
 }
@@ -284,14 +294,15 @@ h4 {
 }
 
 .no-br {
-    margin-bottom: -20px;
+    margin-bottom: -25px;
 }
 
+/* .comment  */
 .review-block {
     background: #EFEFEF;
     padding-left: 15%;
-    width: 100vw;
-    margin-left: -10%;
+    /* width: 100vw; */
+    /* margin-left: -10%; */
     padding-top: 3%;
     margin-bottom: 2%;
     padding-bottom: 2%;
@@ -306,7 +317,7 @@ h4 {
 }
 
 .review-left {
-    margin-left: 0%;
+    /* margin-left: 0%; */
 }
 
 .name-fb {
@@ -322,7 +333,7 @@ h4 {
     gap: 3%;
 }
 
-/* .comment  */
+
 p {
     font-size: calc(10px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
@@ -342,11 +353,15 @@ p {
 .cost-block {
     background: #9DC9C8;
     display: block;
-    margin-top: -2%;
-    margin-left: -7%;
-    padding-left: 12%;
+    /* margin-top: 0; */
+    margin-bottom: 10%;
+    /* margin-left: -7%; */
+    /* padding-left: 12%; */
     padding-top: 2%;
     padding-bottom: 2%;
+    padding-left: 3%;
+    /* height: 100%; */
+    margin-top: -3%;
 }
 
 .cost-weight {
@@ -355,7 +370,7 @@ p {
 }
 
 .cost-left {
-    margin-left: -0.09%;
+    margin-left: 0;
 }
 
 .cost-lesson-now {
@@ -376,16 +391,22 @@ p {
 
 footer {
     background-color: black;
-    margin-left: -7%;
+    /* margin-left: -0.7%;
+    margin-right: -0.7%;
     padding-left: 11%;
-    padding-top: 2.5%;
+    /* padding-top: 2.5%; */
     padding-bottom: 1%;
+
+    /* background-size: 100vw; */
+    /* padding-left: 3%;  */
+    /* width: 100%;
+    height: 100%; */
 }
 
 .logo-list {
     list-style-type: none;
     display: flex;
-    margin-left: -40px;
+    /* margin-left: -40px; */
     gap: 0.5%;
     font-size: calc(10px + 5 * ((100vw - 320px) / (1440 - 320)));
 }
@@ -398,10 +419,13 @@ footer {
     display: flex;
     justify-content: space-between;
     margin-right: 10%;
+    margin-top: -5%;
+    margin-left: -1%;
 }
 
 .sync-white {
-    width: calc(30px + 5 * ((100vw - 320px) / (1440 - 320)));
+    width: calc(50% + 5 * ((100vw - 320px) / (1440 - 320)));
+    margin-left: 35%;
 }
 
 .contact-list {
@@ -412,7 +436,7 @@ footer {
 }
 
 .contact-list li {
-    margin-bottom: 7%;
+    /* margin-bottom: 7%; */
 }
 
 .contact-list img {
@@ -427,6 +451,7 @@ li a {
 .copyright {
     color: white;
     font-size: calc(10px + 3 * ((100vw - 320px) / (1440 - 320)));
+    margin-left: 1.5%;
 }
 
 .space-right {
@@ -479,5 +504,14 @@ li a {
         width: 80%;
     }
 
+    .comment {
+        padding-left: 3%;
+    }
 
+}
+
+@media(max-width:1094px) {
+    .programm {
+        margin-left: 10%;
+    }
 }
