--- a/style.css
+++ b/style.css
@@ -3,19 +3,25 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin-top: 2%;
-    /* padding-left: 1%; */
-    /* max-width: 100%; */
+    margin-left: 0;
+    margin-right: 0;
     overflow-x: hidden;
+}
+
+header {
+    margin-left: 3%;
 }
 
 main {
     padding-left: 2%;
+    margin-left: 3%;
 }
 
 /* верхняя иконка */
 
 .sync-black {
     width: 6%;
+    padding-left: 2%;
 }
 
 /* описание курсов */
@@ -24,7 +30,6 @@ main {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
-    /* margin-left: -40px; */
     width: 70%;
     max-width: 714px;
 }
@@ -37,7 +42,7 @@ main {
     justify-content: space-between;
     margin-left: -40px;
     width: 70%;
-    max-width: 714px;
+    max-width: 700px;
 }
 
 
@@ -226,6 +231,8 @@ h3 {
 
 .format {
     margin-top: 5%;
+    width: 100%;
+    margin-right: 5%;
 }
 
 h2 {
@@ -236,13 +243,21 @@ h2 {
 
 .blue-color {
     color: #1E4681;
-    font-size: calc(14px + 10 * ((100vw - 320px) / (1440 - 320)));
+    font-size: calc(12px + 8 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .format-about {
     display: flex;
-    gap: 5%;
-    font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
+    justify-content: space-between;
+    /* flex-wrap: wrap; */
+    font-size: calc(12px + 8 * ((100vw - 320px) / (1440 - 320)));
+}
+
+.webinar,
+.access-forever,
+.communication {
+    width: 25%;
+    /* max-width: 450px; */
 }
 
 /* Список ЧТО УЗНАЁМ */
@@ -262,7 +277,6 @@ h2 {
     flex-wrap: wrap;
     margin-left: -1%;
     gap: 3%;
-    /* padding-left: 5px; */
     margin-top: 3%;
     align-items: center;
 }
@@ -301,8 +315,6 @@ h4 {
 .review-block {
     background: #EFEFEF;
     padding-left: 15%;
-    /* width: 100vw; */
-    /* margin-left: -10%; */
     padding-top: 3%;
     margin-bottom: 2%;
     padding-bottom: 2%;
@@ -316,9 +328,6 @@ h4 {
     width: 50%;
 }
 
-.review-left {
-    /* margin-left: 0%; */
-}
 
 .name-fb {
     margin-top: 3%;
@@ -353,14 +362,10 @@ p {
 .cost-block {
     background: #9DC9C8;
     display: block;
-    /* margin-top: 0; */
     margin-bottom: 10%;
-    /* margin-left: -7%; */
-    /* padding-left: 12%; */
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 3%;
-    /* height: 100%; */
     margin-top: -3%;
 }
 
@@ -391,22 +396,13 @@ p {
 
 footer {
     background-color: black;
-    /* margin-left: -0.7%;
-    margin-right: -0.7%;
-    padding-left: 11%;
-    /* padding-top: 2.5%; */
     padding-bottom: 1%;
-
-    /* background-size: 100vw; */
-    /* padding-left: 3%;  */
-    /* width: 100%;
-    height: 100%; */
 }
+
 
 .logo-list {
     list-style-type: none;
     display: flex;
-    /* margin-left: -40px; */
     gap: 0.5%;
     font-size: calc(10px + 5 * ((100vw - 320px) / (1440 - 320)));
 }
@@ -420,7 +416,7 @@ footer {
     justify-content: space-between;
     margin-right: 10%;
     margin-top: -5%;
-    margin-left: -1%;
+
 }
 
 .sync-white {
@@ -435,9 +431,6 @@ footer {
 
 }
 
-.contact-list li {
-    /* margin-bottom: 7%; */
-}
 
 .contact-list img {
     width: calc(14px + 5 * ((100vw - 320px) / (1440 - 320)));
@@ -454,11 +447,7 @@ li a {
     margin-left: 1.5%;
 }
 
-.space-right {
-    /* margin-right: 1%; */
-    /* margin-left: 5%; */
-    /* padding-right: 1%; */
-}
+
 
 @media(max-width:726px) {
     .programm-items {
@@ -466,9 +455,20 @@ li a {
         gap: 10%;
     }
 
+    .avatar {
+        padding-top: 2%;
+    }
+
     .format-about {
         flex-direction: column;
-        width: 35%;
+
+    }
+
+    .webinar,
+    .access-forever,
+    .communication {
+        width: 60%;
+
     }
 
     .crane-shade {
@@ -487,9 +487,6 @@ li a {
         padding-top: 200%;
     }
 
-    .review-block {
-        /* margin-left: -%; */
-    }
 
     .tarkov-box {
         max-width: 65%;
