--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ h1 {
 .duration {
     display: flex;
     justify-content: space-between;
+
     margin-top: 2%;
     padding-right: 5%;
 }
@@ -308,15 +309,15 @@ h4 {
 }
 
 .no-br {
-    margin-bottom: -25px;
+    margin-bottom: -10px;
 }
 
 /* .comment  */
 .review-block {
     background: #EFEFEF;
     padding-left: 15%;
-    padding-top: 3%;
-    margin-bottom: 2%;
+    padding-top: 1%;
+    margin-bottom: 3%;
     padding-bottom: 2%;
 }
 
@@ -324,24 +325,25 @@ h4 {
     background-color: white;
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
-    padding: 1% 1.5%;
-    width: 50%;
+    padding: 0.5% 2% 3% 2%;
+    width: 60%;
+    min-width: 180px;
 }
 
-
-.name-fb {
-    margin-top: 3%;
-}
-
-.logo-avatar {
-    width: 50%;
+.comment-palexova {
+    font-size: calc(12px + 10 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .avatar-fb {
     display: flex;
     gap: 3%;
+    padding-left: 2%;
 }
 
+.avatar-fb img {
+    width: calc(20% + 3 * ((100vw - 320px) / (1440 - 320)));
+
+}
 
 p {
     font-size: calc(10px + 10 * ((100vw - 320px) / (1440 - 320)));
@@ -363,9 +365,9 @@ p {
     background: #9DC9C8;
     display: block;
     margin-bottom: 10%;
-    padding-top: 2%;
+    padding-top: 5%;
     padding-bottom: 2%;
-    padding-left: 3%;
+    padding-left: 5%;
     margin-top: -3%;
 }
 
@@ -376,20 +378,22 @@ p {
 
 .cost-left {
     margin-left: 0;
+    margin-right: 2%;
+    font-size: calc(40px + 7 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .cost-lesson-now {
     display: flex;
     width: 50%;
-    gap: 5%;
+    gap: 7%;
 }
 
 
 .level-now {
-    display: inline-block;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     font-size: calc(15px + 5 * ((100vw - 320px) / (1440 - 320)));
     font-weight: 400;
+    width: 65%;
 }
 
 /* Footer */
@@ -397,6 +401,8 @@ p {
 footer {
     background-color: black;
     padding-bottom: 1%;
+    margin-bottom: -1%;
+
 }
 
 
@@ -405,23 +411,41 @@ footer {
     display: flex;
     gap: 0.5%;
     font-size: calc(10px + 5 * ((100vw - 320px) / (1440 - 320)));
+    margin-left: 10%;
 }
 
 .logo-list li img {
-    width: calc(10px + 7 * ((100vw - 320px) / (1440 - 320)));
+    width: calc(14px + 7 * ((100vw - 320px) / (1440 - 320)));
 }
 
 .footer-flex {
     display: flex;
     justify-content: space-between;
-    margin-right: 10%;
-    margin-top: -5%;
+    flex-wrap: wrap;
+    /* margin-right: 10%; */
+    /* margin-top: -5%; */
+    /* gap: 10%;
+    width: 100%; */
 
 }
 
+.footer-right {
+    margin-right: 6%;
+}
+
+.footer-left {
+    margin-left: 5%;
+}
+
 .sync-white {
-    width: calc(50% + 5 * ((100vw - 320px) / (1440 - 320)));
-    margin-left: 35%;
+    width: calc(70px + 3 * ((100vw - 320px) / (1440 - 320)));
+    /* margin-left: 4%; */
+    margin-top: -15%;
+}
+
+.logo-list {
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .contact-list {
@@ -431,9 +455,12 @@ footer {
 
 }
 
+.logo-icon {
+    /* margin-left: 5%; */
+}
 
 .contact-list img {
-    width: calc(14px + 5 * ((100vw - 320px) / (1440 - 320)));
+    width: calc(17px + 5 * ((100vw - 320px) / (1440 - 320)));
 }
 
 li a {
@@ -444,7 +471,7 @@ li a {
 .copyright {
     color: white;
     font-size: calc(10px + 3 * ((100vw - 320px) / (1440 - 320)));
-    margin-left: 1.5%;
+    margin-left: 5%;
 }
 
 
@@ -463,6 +490,8 @@ li a {
         flex-direction: column;
 
     }
+
+
 
     .webinar,
     .access-forever,
@@ -501,10 +530,66 @@ li a {
         width: 80%;
     }
 
+    .duration {
+        flex-wrap: wrap;
+        margin-top: 5%;
+        gap: 3%;
+        margin-left: 3%;
+
+    }
+
+    .lessons,
+    .hours,
+    .weeks {
+        width: 35%;
+    }
+
+    /* .copyright {
+
+        margin-left: 10%;
+        padding-top: 2%;
+    } */
+
     .comment {
         padding-left: 3%;
     }
 
+    /* .logo-icon {
+        margin-left: 0%;
+    } */
+
+    /* .footer-right {
+        margin-left: 0;
+    } */
+    .footer-flex {
+        flex-direction: column;
+    }
+
+    .logo-list li img {
+        /* width: calc(14px + 7 * ((100vw - 320px) / (1440 - 320))); */
+        /* padding-bottom: 50%; */
+        /* min-width: 15px; */
+    }
+
+    /* .logo-list {
+        margin: 0;
+        padding-top: 3%;
+    } */
+    /* 
+    .sync-white {
+        width: calc(10% + 5 * ((100vw - 320px) / (1440 - 320)));
+        margin-left: 10%;
+        margin-top: 0;
+        min-width: 65px;
+    } */
+
+    /* .contact-list {
+        padding-top: 5%;
+    } */
+
+    /* .footer-left {
+        margin-left: 0%;
+    } */
 }
 
 @media(max-width:1094px) {
